--- a/_sass/spec/default_theme.scss
+++ b/_sass/spec/default_theme.scss
@@ -24,7 +24,9 @@
   --main-blockquote-text-color: #6a737d;
   --main-blockquote-text-border: #dfe2e5;
 
+  --gist-default-color: black;
+  --gist-border-color: #e1e4e8;
+  --gist-header-bg-color: #f6f8fa;
   --gist-bg-color: white;
   --gist-line-number-color: #6e7781;
-  --gist-default-color: black;
 }
